--- a/todoapp/templates/layout.html
+++ b/todoapp/templates/layout.html
@@ -21,8 +21,13 @@
         </a>
         <div class="navbar-nav">
             {% if current_user.is_authenticated %}
-                <a class="nav-item nav-link" href="{{ url_for('listas') }}">Ver listas</a>
-                <a class="nav-item nav-link text-danger" href="{{ url_for('logout') }}">Sair</a>
+                <div class="dropdown mt-1 me-1">
+                    <i style="font-size: 1.7rem; color:black; cursor: pointer" class="bi bi-person-circle" data-bs-toggle="dropdown"></i>
+                    <ul class="dropdown-menu dropdown-menu-end">
+                        <li><a class="dropdown-item" href="{{ url_for('listas') }}">Ver listas</a></li>
+                        <li><a class="dropdown-item text-danger" href="{{ url_for('logout') }}">Sair</a></li>
+                    </ul>
+                </div>
             {% else %}
                 <a class="nav-item nav-link" href="{{ url_for('login') }}">Login</a>
                 <a class="nav-item nav-link" href="{{ url_for('cadastro') }}">Cadastro</a>
