fix: busca por tarefas consertada

--- a/todoapp/templates/listas.html
+++ b/todoapp/templates/listas.html
@@ -80,7 +80,7 @@
                             <div class="card-header justify-content-between d-flex">
                                 <div class="text-left px-0">
                                     <p id="_titulo_tarefa" contenteditable="true" class="mt-1 mb-0 me-2 editable">
-                                        Modelo de tarefa
+                                        \\modelo
                                     </p>
                                 </div>
                                 <div class="row text-right">
@@ -96,7 +96,7 @@
                             </div>
                             <div class="card-body">
                                 <div id="_descricao_tarefa" contenteditable="true" class="card-text editable" style="white-space: pre-line">
-                                    Modelo de descrição
+                                    \\modelo
                                 </div>
                             </div>
                             <div class="card-footer bg-transparent">
