--- a/todoapp/static/css/styles.css
+++ b/todoapp/static/css/styles.css
@@ -16,3 +16,30 @@
   outline: 1px solid #0d6efd;
   border-radius: 5px;
 }
+
+.context-menu {
+    display: none;
+    z-index: 1000;
+    position: absolute;
+    overflow: hidden;
+    border: 1px solid #CCC;
+    white-space: nowrap;
+    font-family: sans-serif;
+    background: #FFF;
+    color: #333;
+    border-radius: 5px;
+    padding: 0;
+}
+
+/* Each of the items in the list */
+.context-menu li {
+    padding: 8px 12px;
+    cursor: pointer;
+    list-style-type: none;
+    transition: all .3s ease;
+    user-select: none;
+}
+
+.context-menu li:hover {
+    background-color: #DEF;
+}
