--- a/todoapp/templates/listas.html
+++ b/todoapp/templates/listas.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% block content %}
-    <div class="modal fade" tabindex="-1">
+    <div id="modal-confirmacao" class="modal fade" tabindex="-1">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
@@ -10,9 +10,7 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body text-center">
-                    <p>
-                        Texto do modal
-                    </p>
+                    Texto do modal
                 </div>
                 <div class="modal-footer">
                     <div class="container">
@@ -25,6 +23,37 @@
             </div>
         </div>
     </div>
+
+    <div id="modal-compartilhar-lista" class="modal fade" tabindex="-1">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">
+                        Compartilhar lista 'Programação para Web'
+                    </h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <form action="">
+                        <div class="mb-3">
+                            <label for="email" class="col-form-label">Email</label>
+                            <input type="email" id="email" name="email" class="form-control">
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <div class="container">
+                        <div class="btn-toolbar justify-content-between" aria-label="Toolbar with button groups">
+                            <button data-bs-dismiss="modal" id="cancelar" type="button" class="btn btn-secondary">Cancelar</button>
+                            <button data-bs-dismiss="modal" id="confirmar" type="button" class="btn btn-primary">Compartilhar</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <ul class='context-menu'></ul>
 
 
     <div class="mt-2 container-fluid">
