Implementando envio de cópia de listas

--- a/todoapp/templates/listas.html
+++ b/todoapp/templates/listas.html
@@ -36,8 +36,10 @@
                 <div class="modal-body">
                     <form autocomplete="off">
                         <div class="mb-3 autocomplete">
-                            <label for="email-autocomplete" class="col-form-label">Email</label>
-                            <input type="email" id="email-autocomplete" name="email" class="form-control">
+                            <div>
+                                <label for="email-autocomplete" class="col-form-label">Email</label>
+                                <input type="email" id="email-autocomplete" name="email" class="form-control">
+                            </div>
                         </div>
                     </form>
                 </div>
@@ -45,7 +47,7 @@
                     <div class="container">
                         <div class="btn-toolbar justify-content-between" aria-label="Toolbar with button groups">
                             <button data-bs-dismiss="modal" id="cancelar" type="button" class="btn btn-secondary">Cancelar</button>
-                            <button data-bs-dismiss="modal" id="confirmar" type="button" class="btn btn-primary">Compartilhar</button>
+                            <button id="confirmar" type="button" class="btn btn-primary">Compartilhar</button>
                         </div>
                     </div>
                 </div>
