API para notificações

--- a/todoapp/templates/layout.html
+++ b/todoapp/templates/layout.html
@@ -32,7 +32,7 @@
                 <div class="dropdown me-1">
                     <button id="notificacoes" data-bs-toggle="dropdown" type="button" style="border: none; background-color: inherit">
                         <i style="font-size: 1.7rem; cursor: pointer" class="bi bi-bell-fill position-relative"></i>
-                        <span style="display: none" class="position-absolute mt-2 translate-middle p-2 border bg-danger border-light rounded-circle">
+                        <span id="badge" style="display: none" class="position-absolute mt-2 translate-middle p-2 border bg-danger border-light rounded-circle">
                             <span class="visually-hidden">New alerts</span>
                         </span>
                     </button>
