Iniciando sistema de notificação

--- a/todoapp/templates/layout.html
+++ b/todoapp/templates/layout.html
@@ -21,6 +21,17 @@
         </a>
         <div class="navbar-nav">
             {% if current_user.is_authenticated %}
+                <div id="notificacoes" class="dropdown me-2">
+                    <button data-bs-toggle="dropdown" type="button" style="border: none; background-color: inherit">
+                        <i style="font-size: 1.7rem; cursor: pointer" class="bi bi-bell-fill position-relative"></i>
+                        <span id="badge" style="display: none" class="position-absolute mt-2 translate-middle p-2 border bg-danger border-light rounded-circle">
+                            <span class="visually-hidden">New alerts</span>
+                        </span>
+                    </button>
+                    <ul class="dropdown-menu dropdown-menu-end">
+                        <li><a class="dropdown-item" style="cursor: pointer"></a></li>
+                    </ul>
+                </div>
                 <div class="dropdown me-1 pe-2">
                     <i style="font-size: 1.7rem; cursor: pointer" class="bi bi-person-circle" data-bs-toggle="dropdown"></i>
                     <ul class="dropdown-menu dropdown-menu-end">
@@ -29,20 +40,6 @@
                         <li><a class="dropdown-item text-danger" href="{{ url_for('logout') }}">Sair</a></li>
                     </ul>
                 </div>
-                <div class="dropdown me-1">
-                    <button id="notificacoes" data-bs-toggle="dropdown" type="button" style="border: none; background-color: inherit">
-                        <i style="font-size: 1.7rem; cursor: pointer" class="bi bi-bell-fill position-relative"></i>
-                        <span id="badge" style="display: none" class="position-absolute mt-2 translate-middle p-2 border bg-danger border-light rounded-circle">
-                            <span class="visually-hidden">New alerts</span>
-                        </span>
-                    </button>
-                    <ul class="dropdown-menu dropdown-menu-end">
-                        <li><a class="dropdown-item" href="{{ url_for('perfil') }}">Perfil</a></li>
-                        <li><a class="dropdown-item" href="{{ url_for('listas') }}">Ver listas</a></li>
-                        <li><a class="dropdown-item text-danger" href="{{ url_for('logout') }}">Sair</a></li>
-                    </ul>
-                </div>
-
             {% else %}
                 <a class="nav-item nav-link" href="{{ url_for('login') }}">Login</a>
                 <a class="nav-item nav-link" href="{{ url_for('cadastro') }}">Cadastro</a>
